# caspar

./: .gitignore  example_bal.py  notes.md  pyproject.toml
caspar/: __init__.py  torch_tools.py
caspar/cuda/: color.py  cuda_printer.py  cufunc.py  dlls.py  get_expr_order.py  get_fixed_expression.py  kernel.py  lib_loader.py  lib_maker.py
caspar/cuda/allocation/: __init__.py  allocator.py  fixers.py  ftypes.py  order.py
caspar/cuda/templates/: collaborate.cuh  core.cu.jinja  unique.cuh
caspar/opt/: cudss.py  factor.py  params.py  res_collection.py  solver.py  state_handler.py
caspar/opt/jtj_tools/: __init__.py  mtm.py
caspar/opt/jtj_tools/src/: jac_tools.cu
examples/: example_bal.py  test_reorder.py
